Updated product share images

--- a/source/cloud-compliance-management-system/index.html.slim
+++ b/source/cloud-compliance-management-system/index.html.slim
@@ -13,7 +13,7 @@ collectionOrder: 3
 priority: "0.9"
 ---
 ruby:
-  current_page.data.share_image = image_share_platform
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/4wojUl2MFGICcaykkGIMCK/a65e77c6c0ea966fbc8dee9659a84d4f/product-ccms-share.jpg'
   the_form = data.site.forms['1sd7ExrRIkg0SgQ0CsiiaO']
   img_1 = 'https://images.ctfassets.net/189dvqdsjh46/41KHEMRsg8CeGiO2cSawU8/1d95703cc95b4ca18660e95a105f1345/ccms--compliance-checks.jpg'
   img_2 = 'https://images.ctfassets.net/189dvqdsjh46/1KxUwvIiuE4gEaeqUSIgq4/a4b9c86fda34d160d94bdd55c766b2e5/ccms-diagram.png'
