--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -13,7 +13,7 @@ collectionOrder: 3
 ctaCustom: true
 ---
 ruby:
-  current_page.data.share_image = data.site.cta["5eA1ToAIEw4Qy20mkUmmcm"].cta_image.url + '?w=800'
+  current_page.data.share_image = 'https://images.ctfassets.net/189dvqdsjh46/nGfjpkdV4GIIk6ii6wQiE/e3d6a9f1b90f2bdd9e4f9a071f156930/product-cmi-share.jpg'
   current_page.data.date = DateTime.now.strftime('%B %-d, %Y')
   the_form = data.site.forms['328pNB4IvCaQWQMCWmgSCy']
 
