--- a/source/assets/scss/views/blog-section.scss
+++ b/source/assets/scss/views/blog-section.scss
@@ -67,7 +67,6 @@ body.blog {
         min-height: calc(20rem + 14vw); // key here for opening space for images
         &:nth-child(n+3){ // adjust things as they go down
             font-size: 95%;
-            min-height: calc(10rem + 14vw);
             .headline-4 {
                 font-size: 1.3rem;
             }
@@ -75,20 +74,20 @@ body.blog {
     }
     // tablet or medium
     @include breakpoint(medium) {
-        .item-0 {
+        .item:nth-child(1) {
             grid-column: 1 / span 6;
             grid-row: 1;
         }
-        .item-1 {
+        .item:nth-child(2) {
             grid-column: 1 / span 3;
             grid-row: 2;
         }
-        .item-2 {
+        .item:nth-child(3) {
             // align-items: start;
             grid-column: 4 / span 3;
             grid-row: 2;
         }
-        .item-3 {
+        .item:nth-child(4) {
             grid-column: 1 / span 3;
             grid-row: 3 ;
         }
@@ -96,7 +95,7 @@ body.blog {
         //     grid-column: 3 ;
         //     grid-row: 3 ;
         // }
-        .item-5 {
+        .item:nth-child(5) {
             grid-column: 4 / span 3;
             grid-row: 3;
         }
@@ -110,6 +109,21 @@ body.blog {
         .item {
             align-items: flex-end;
             flex-direction: row;
+            &:nth-child(n+2) { // don't let rows after top get too big
+                min-height: calc(15rem + 10vw);
+                max-height: calc(20rem + 10vw);
+            }
+            // &:nth-child(n+3) {
+            //     max-height: calc(15rem + 10vw);
+            // }
+            &:nth-child(4) {
+                grid-column: 1 / span 4 ;
+                grid-row: 3 ;
+            }
+            &:nth-child(5) {
+                grid-column: 5 / span 2;
+                grid-row: 3;
+            }
         }
         // .item-0 {
         //     grid-column: 1 / span 6;
@@ -124,18 +138,10 @@ body.blog {
         //     grid-column: 4 / span 2 ;
         //     grid-row: 2 / span 1;
         // }
-        .item-3 {
-            grid-column: 1 / span 4 ;
-            grid-row: 3 ;
-        }
         // // .item-4 {
         // //     grid-column: 3 / span 3 ;
         // //     grid-row: 3;
         // // }
-        .item-5 {
-            grid-column: 5 / span 2;
-            grid-row: 3;
-        }
         // .item-3, .item-4 {
         // }
     }
