--- a/source/assets/scss/modules/blog.scss
+++ b/source/assets/scss/modules/blog.scss
@@ -29,7 +29,7 @@ body.blog {
 }
 .post-tags {
     display: inline-block;
-    margin: 0 1rem 0 0;
+    // margin: 0 1rem 0 0; // space for anchor
     .icon {
         margin-right: 0.5rem;
     }
