--- a/source/blog/partials/_blog-subscription-simple.erb
+++ b/source/blog/partials/_blog-subscription-simple.erb
@@ -27,8 +27,8 @@ if defined?(color)
     end
 else
     colorclass = ''
-    buttonstyle = 'button--primary'
-    iconcolor = 'gray-5'
+    buttonstyle = 'success'
+    iconcolor = 'gray-8'
 end
 %>
 <div class="<%= colorclass %> blog-subscription">
