--- a/source/assets/scss/modules/components.scss
+++ b/source/assets/scss/modules/components.scss
@@ -222,7 +222,7 @@ span.label + span.label { // when in a tag list
     // right: 0;
     display: inline-block;
     // padding: 0.5rem;
-    transition: color $speed, opacity $speed;
+    transition: color $speed, background-color $speed, opacity $speed, transform $speed;
     &[data-theme="light"] {
         color: white;
         opacity: 0.5;
