--- a/source/assets/scss/views/blog-section.scss
+++ b/source/assets/scss/views/blog-section.scss
@@ -9,186 +9,49 @@
 @import '../modules/blog';
 // @import '../modules/fonts-optional';
 
-$gap: calc(1rem + 2vw);
+
 body.blog {
     background-color: $gray-10;
 }
-.width-xl {
-    max-width: map-get($breakpoints, xxlarge);
-    margin-right: auto;
-    margin-left: auto;
+.legal-consent-container { // hubspot disclaimer, I do not want thee
+    display: none;
 }
-// .post-card {
-// }
-// .item {
-// }
-.featured-posts {
-    margin: $gap;
-}
-.post-card {
-    .media-object { // person-card component overrides
+.blog-subscription {
+    max-width: 38rem;
+    label {
+        display: none;
+    }
+    .button {
         margin-bottom: 0;
     }
-    .avatar--large {
-        width: 3rem;
+}
+.post-meta { // group for tags, permalink, etc.
+    line-height: 1;
+}
+.post-tags {
+    display: inline-block;
+    // margin: 0 1rem 0 0; // space for anchor
+    .icon {
+        margin-right: 0.5rem;
     }
 }
-@supports not (display: grid) { // fallback for older browsers. https://caniuse.com/#search=grid
-    .grid-wrapper {
-        display: flex;
-        flex-wrap: wrap;
-        flex-direction: column;
-    }
-    .item {
-        margin-bottom: 2rem;
-    }
-    .post-card {
-        padding: 1rem 1.5rem;
+.post-author + .post-meta { // when both are present, and parent is narrow, this adds some space above tags
+    margin-top: 1rem;
+}
+.post-card--horiz {
+    .feature-thumb {
+        width: 6rem;
         @include breakpoint (medium) {
-            min-width: 20rem;
-            max-width: 45rem;
+            width: 8rem;
+        }
+        @include breakpoint (large) {
+            width: 12rem;
+        }
+        @include breakpoint (xlarge) {
+            width: 15rem;
         }
     }
 }
-@supports (display: grid) {
-    .grid-wrapper {
-        display: grid;
-        grid-gap: $gap;
-        grid-template-columns: 6;
-    }
-    .post-card {
-        padding: calc(1rem + 0.6vw);
-    }
-    .item {
-        display: flex;
-        align-items: flex-end;
-        flex-direction: column;
-        grid-column: 1 / span 3;
-        min-height: calc(20rem + 14vw); // key here for opening space for images
-        &:nth-child(n+2){ // adjust things as they go down
-            font-size: 95%;
-            .headline-4 {
-                font-size: 1.3rem;
-            }
-        }
-    }
-    // tablet or medium
-    @include breakpoint(medium) {
-        .item:nth-child(1) {
-            grid-column: 1 / span 6;
-            grid-row: 1;
-        }
-        .item:nth-child(2) {
-            grid-column: 1 / span 3;
-            grid-row: 2;
-        }
-        .item:nth-child(3) {
-            // align-items: start;
-            grid-column: 4 / span 3;
-            grid-row: 2;
-        }
-        .item:nth-child(4) {
-            grid-column: 1 / span 3;
-            grid-row: 3 ;
-        }
-        // .item-4 {
-        //     grid-column: 3 ;
-        //     grid-row: 3 ;
-        // }
-        .item:nth-child(5) {
-            grid-column: 4 / span 3;
-            grid-row: 3;
-        }
-    }
-    // typical desktop
-    @include breakpoint(large) {
-        .post-card {
-            min-width: 10em;
-            max-width: 45em;    
-        }
-        .item {
-            align-items: flex-end;
-            flex-direction: row;
-            &:nth-child(n+2) { // don't let rows after top get too big
-                min-height: calc(15rem + 10vw);
-                max-height: calc(20rem + 10vw);
-            }
-            // &:nth-child(n+3) {
-            //     max-height: calc(15rem + 10vw);
-            // }
-            &:nth-child(4) {
-                grid-column: 1 / span 4 ;
-                grid-row: 3 ;
-            }
-            &:nth-child(5) {
-                grid-column: 5 / span 2;
-                grid-row: 3;
-            }
-        }
-    }
-    @include breakpoint(xlarge) {
-        .item {
-            &:nth-child(n+2) { // don't let rows after top get too big
-                min-height: calc(20rem + 10vw);
-                max-height: calc(25rem + 10vw);
-            }
-        }
-    }
-    // ultra-wide
-    // @include breakpoint(xxlarge) {
-    //     .item-0 {
-    //         grid-column: 1 / span 2;
-    //         grid-row: 1;
-    //     }
-    //     .item-1 {
-    //         grid-column: 3 / span 1;
-    //         grid-row: 1;
-    //     }
-    //     .item-2 {
-    //         grid-column: 1;
-    //         grid-row: 2;
-    //     }
-    //     .item-3 {
-    //         grid-column: 2;
-    //         grid-row: 2;
-    //     }
-    //     .item-4 {
-    //         grid-column: 3;
-    //         grid-row: 2 ;
-    //     }
-    // }
-}
-
-$bg-height: calc(8rem + 16vw);
-.featured-image {
-    height: 100%;
-    @include breakpoint(large) {
-        position: absolute;
-        top:  0;
-        left: 0;
-        height: 100%;
-        width:  100%;
-    }
-    background-color: $gray-4;
-    overflow: hidden;
-    .lozad {
-        @include blur(3vw);
-        transition: opacity 0.3s, filter 0.3s, -webkit-filter 0.3s, -moz-filter 0.3s, -o-filter 0.3s, -ms-filter 0.3s;
-    }
-    .lozad.loaded {
-        @include blur(0);
-        -webkit-transition-delay: 1s;
-        transition-delay:         1s;
-    }
-}
-.row--card-grid {
-    @include breakpoint (large) {
-        // .column:first-child, .columns:first-child { // adds bottom margin for equal height cards
-        //     margin-bottom: 3rem;
-        // }
-        .post-card--horiz { // only create equal height cards in here. Cards can live fine outside this parent class, just won't be full-height.
-            height: 100%;
-            margin-bottom: 0; // I *think* this is what we want...
-        }
-    }
+.card-featured-section .card-header-title {
+    font-size: 1.4rem;
 }
