--- a/source/blog/index.html.erb
+++ b/source/blog/index.html.erb
@@ -5,7 +5,7 @@ author: "Datica, Inc."
 tags: "compliance, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 layout: company
-customCSS: "blog"
+customCSS: "blog-section"
 feed_url: "https://datica.com/blog/feed.xml"
 ---
 <% 
@@ -14,6 +14,7 @@ current_page.data.date = today.strftime('%B %-d, %Y')
 # today = time.inspect
 sorted_posts = data.site.blog.to_a.sort_by{ |id, post| post['pub_date'] }.reverse!
 %>
+
 <div class="container-color--dark-alt">
     <% sorted_posts.take(1).each do | id, post | %>
         <% if post.has_key?("featured_image") %>
