Some polish on the blog section view. Added latest CTA promo. Added "light" style option to person snippet (for dark backgrounds).

--- a/source/assets/scss/modules/cards.scss
+++ b/source/assets/scss/modules/cards.scss
@@ -76,7 +76,7 @@
     // featured card container
     &-featured-section {
         @extend .section-article--med;
-        padding-bottom: 1rem;
+        // padding-bottom: 1rem;
     }
     // featured image atop card, with title set at bottom
     &-header {
