--- a/source/blog/partials/_blog-subscription.erb
+++ b/source/blog/partials/_blog-subscription.erb
@@ -16,10 +16,10 @@ if defined?(color)
         colorclass = 'container-gray-11'
         buttonstyle = 'button--primary'
         iconcolor = 'gray-9'
-    # when 'dark', 'dark-gray'
-    #   colorclass = color_default
-    #   buttonstyle = 'button--primary'
-    #   iconcolor = 'gray-5'
+    when 'dark', 'dark-gray'
+        colorclass = color_default
+        buttonstyle = 'success'
+        iconcolor = 'gray-5'
     else
         colorclass = color_default
         buttonstyle = 'button--primary'
